# TwoFieldMPM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  batch.py  build.py  download_data.py  make.py
cmake/bow/: bow_global_flags.cmake  bow_warnings.cmake
cmake/recipes/: amgcl.cmake  boost.cmake  eigen.cmake  libigl.cmake  onetbb.cmake  tbb.cmake  tbb2020.cmake
format/: CMakeLists.txt  git-cmake-format.py  git-pre-commit-hook
include/: CMakeLists.txt
include/Bow/: Macros.h  Types.h
include/Bow/ConstitutiveModel/: ConstitutiveModel.cpp  ConstitutiveModel.h  EquationOfState.cpp  EquationOfState.h  FibrinPoroelasticity.cpp  FibrinPoroelasticity.h  FixedCorotated.cpp  FixedCorotated.h  LinearElasticity.cpp  LinearElasticity.h  NeoHookean.cpp  NeoHookean.h  PlasticityOp.h  StvkWithHencky.cpp  StvkWithHencky.h
include/Bow/Energy/: Prototypes.h
include/Bow/Energy/FEM/: ElasticityEnergy.h  ElasticityEnergy.tpp  ExternalForceEnergy.h  ExternalForceEnergy.tpp  FEMEnergies.h  InertialEnergy.h  InertialEnergy.tpp  IpcEnergy.h  IpcEnergy2D.tpp  IpcEnergy3D.tpp  Utils.cpp  Utils.h
include/Bow/Energy/FEM/Shell/: BendingEnergy.h  BendingEnergy.tpp  MembraneEnergy.h  MembraneEnergy.tpp  Utils.h
include/Bow/Energy/MPM/: ElasticityEnergy.h  ElasticityEnergy.tpp  ElasticityOp.h  EulerianForceEnergy.h  EulerianForceEnergy.tpp  InertialEnergy.h  InertialEnergy.tpp  MPMEnergies.h
include/Bow/Geometry/: BoundaryConditions.cpp  BoundaryConditions.h  DihedralAngle.h  GeometryDerivative.cpp  GeometryDerivative.h  PoissonDisk.cpp  PoissonDisk.h  Primitives.h  Query.cpp  Query.h  RandomSampling.h
include/Bow/Geometry/Hybrid/: MPMGrid.h  MPMTransfer.h  ParticlesLevelSet.h
include/Bow/Geometry/IpcUtils/: DistanceType.h  EdgeEdgeCcd.cpp  FrictionUtils.h  PointTriangleCcd.cpp  PointTriangleCcd.h
include/Bow/IO/: ply.cpp  ply.h  tetwild.cpp  tinyply.cpp  tinyply.h  vtk.cpp  vtk.h
include/Bow/Math/: BSpline.h  Barrier.h  MathTools.h  Utils.cpp  Utils.h
include/Bow/Math/LinearSolver/: Amgcl.cpp  Amgcl.h
include/Bow/Optimization/: AugmentedLagrangian.h  LBFGS.h  Newton.h  OptimizerBase.h
include/Bow/Simulator/: BoundaryConditionManager.h  PhysicallyBasedSimulator.h
include/Bow/Simulator/FEM/: BoundaryConditionUpdateOp.h  FEMSimulator.h  IPCSimulator.h  InitializeOp.h  InitializeShellOp.h
include/Bow/Simulator/MPM/: BoundaryConiditionUpdateOp.h  MPMSimulator.h
include/Bow/TimeIntegrator/FEM/: FEMTimeIntegrator.h  FEMTimeIntegrator.tpp
include/Bow/TimeIntegrator/MPM/: MPMTimeIntegrator.h
include/Bow/Utils/: CMDParser.h  FiniteDiff.cpp  MultiArray.h  RandomNumber.cpp  RandomNumber.h  ResultRecorder.h  Serialization.h  SpatialHash.h  Timer.cpp
include/SPGrid/: license.txt  tutorial.md
include/SPGrid/Core/: SPGrid_Array.h  SPGrid_Utilities.cpp  SPGrid_Utilities.h
projects/: CMakeLists.txt
projects/CRAMP/: CMakeLists.txt  CRAMPOp.h  CRAMPSimulator.h  cramp.cpp  crampBatch.py
projects/DFGMPM/: DFGMPMGrid.h  DFGMPMOp.h  DFGMPMSimulator.h  LICENSE  TwoFieldBackwardEuler.h  TwoFieldHodgepodgeEnergy.h  TwoFieldHodgepodgeEnergy.tpp  dfgmpm.cpp  old_DFGMPMSolver.cpp
projects/fem/: CMakeLists.txt  fem_2d.cpp  fem_3d.cpp  ipc_2d.cpp  ipc_2d_vis.cpp  ipc_3d.cpp
projects/mpm/: CMakeLists.txt  mpm.cpp
projects/tutorial/: linear_solver.cpp  timer_logging.cpp
tests/: CMakeLists.txt  constitutive_model_test.cpp  fem_test.cpp  geometry_derivatives_test.cpp  ipc_test.cpp  matrix_derivative_test.cpp  mpm_test.cpp  optimizer_test.cpp  shell_test.cpp
